@@ -254,7 +254,7 @@ b021 uid copy 3 inbox.bozo
 b022 select inbox.bozo
 b023 status inbox.bozo (uidnext)
 b024 fetch 1 (flags)
-b025 append inbox.bozo \Seen {11}
+b025 append inbox.bozo (\Seen) {11}
 test
 
 test
@@ -664,7 +664,7 @@ L015 LIST "" "*"
 L016 RENAME INBOX.a INBOX.b
 L017 RENAME INBOX.a. INBOX.b.
 L018 SELECT INBOX
-L019 APPEND INBOX \Seen {5}
+L019 APPEND INBOX (\Seen) {5}
 test
 
 L020 NOOP
@@ -689,7 +689,7 @@ rm -rf confmdtest
 
 env IMAP_BROKENUIDV=1 MAILDIR=confmdtest $IMAPINVOKE <<EOF
 M001 CREATE INBOX.a
-M002 APPEND INBOX \Seen {5}
+M002 APPEND INBOX (\Seen) {5}
 test
 
 M003 SELECT INBOX
@@ -712,7 +712,7 @@ rm -rf confmdtest
 ../maildir/maildirmake confmdtest || exit 1
 env IMAP_MOVE_EXPUNGE_TO_TRASH=1 IMAP_BROKENUIDV=1 MAILDIR=confmdtest $IMAPINVOKE <<EOF
 N001 LIST "" "*"
-N002 append inbox \Deleted {11}
+N002 append inbox (\Deleted) {11}
 test
 
 test
@@ -984,7 +984,7 @@ env AUTHENTICATED=user1 IMAP_KEYWORDS=1 IMAP_MOVE_EXPUNGE_TO_TRASH=1 IMAP_BROKEN
 T001 ACL STORE INBOX user=user0 +l
 T002 CREATE INBOX.a
 T003 ACL STORE INBOX.a anyone +lr
-T004 append INBOX.a \Seen {22}
+T004 append INBOX.a (\Seen) {22}
 Subject: user1
 
 user1
@@ -995,7 +995,7 @@ EOF
 env AUTHENTICATED=user2 IMAP_KEYWORDS=1 IMAP_MOVE_EXPUNGE_TO_TRASH=1 IMAP_BROKENUIDV=1 MAILDIR=confmdtest3 $IMAPINVOKE <<EOF
 T010 ACL STORE INBOX anyone +l
 T011 CREATE INBOX.a
-T012 append INBOX.a \Seen {22}
+T012 append INBOX.a (\Seen) {22}
 Subject: user2
 
 user2
@@ -1120,7 +1120,7 @@ env IMAP_BROKENUIDV=1 IMAP_TRASHFOLDERNAME=Trash IMAP_EMPTYTRASH=Trash:7 \
     MAILDIR=confmdtest AUTHENTICATED=user1 OUTBOX=.Outbox \
     IMAP_MOVE_EXPUNGE_TO_TRASH=1 \
     SENDMAIL=`pwd`/confsendmail $IMAPINVOKE <<EOF
-U001 APPEND INBOX \Seen {5}
+U001 APPEND INBOX (\Seen) {5}
 test
 
 U002 LIST "" "*"
@@ -1134,7 +1134,7 @@ U009 MYRIGHTS INBOX
 U010 COPY 1 public.nonexistent
 U011 COPY 1 INBOX.nonexistent
 U012 CREATE INBOX.Outbox
-U013 APPEND INBOX \Seen {5}
+U013 APPEND INBOX (\Seen) {5}
 test
 
 U014 NOOP
@@ -1292,5 +1292,23 @@ X014 FETCH 1 (ENVELOPE RFC822)
 X015 FETCH 1 (RFC822.HEADER RFC822.SIZE)
 X016 FETCH 1 (RFC822.TEXT)
 XDONE LOGOUT
+EOF
+rm -rf confmdtest
+
+
+../maildir/maildirmake confmdtest
+env IMAP_SHAREDMUNGENAMES=1 AUTHENTICATED=user1 IMAP_KEYWORDS=1 IMAP_MOVE_EXPUNGE_TO_TRASH=1 IMAP_BROKENUIDV=1 MAILDIR=confmdtest $IMAPINVOKE <<EOF
+Y001 ENABLE UTF8=ACCEPT
+Y002 APPEND INBOX UTF8 (~{14}
+Subject: test
+)
+Y003 SELECT INBOX
+Y004 FETCH 1 (RFC822.HEADER FLAGS)
+Y005 APPEND INBOX (\Seen) UTF8 (~{15}
+Subject: test2
+)
+Y006 NOOP
+Y005 FETCH 2 (RFC822.HEADER FLAGS)
+YDONE LOGOUT
 EOF
 rm -rf confmdtest
