@@ -1963,3 +1963,30 @@
 001665 X016 OK FETCH completed.
 001666 * BYE Courier-IMAP server shutting down
 001667 XDONE OK LOGOUT completed
+001668 * PREAUTH Ready.
+001669 * ENABLED UTF8=ACCEPT
+001669 + OK
+001669 Y001 OK Options enabled
+001670 Y002 OK APPEND Ok.
+001671 * FLAGS (\Draft \Answered \Flagged \Deleted \Seen \Recent)
+001672 * OK [PERMANENTFLAGS (\* \Draft \Answered \Flagged \Deleted \Seen)] Limited
+001673 * 1 EXISTS
+001674 * 0 RECENT
+001675 * OK [UIDVALIDITY] Ok
+001676 * OK [MYRIGHTS "acdilrsw"] ACL
+001677 Y003 OK [READ-WRITE] Ok
+001678 * 1 FETCH (RFC822.HEADER {15}
+001679 Subject: test
+001680  FLAGS ())
+001681 Y004 OK FETCH completed.
+001682 + OK
+001683 Y005 OK APPEND Ok.
+001684 * 2 EXISTS
+001685 * 0 RECENT
+001686 Y006 OK NOOP completed
+001687 * 2 FETCH (RFC822.HEADER {16}
+001688 Subject: test2
+001689  FLAGS (\Seen))
+001690 Y005 OK FETCH completed.
+001691 * BYE Courier-IMAP server shutting down
+001692 YDONE OK LOGOUT completed
