@@ -1,3 +1,9 @@
+2023-02-14  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* imapd.c (append): No long accept a non-standard single
+	flag name instead of a parenthesized flag list to APPEND, due to
+	ambiguity with the UTF8 extension.
+
 5.2.1
 
 2022-12-17  Sam Varshavchik  <mrsam@courier-mta.com>
